🐍 python refactoring is pain
I can't be bothered anymore

🐍 add custom exceptions and base class

YEAH

INDUSTRY BABY

minor changes

--- a/apps/admin-vite/index.html
+++ b/apps/admin-vite/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="shortcut icon" href="/favicon.ico" type="type/x-icon" />
+		<link rel="shortcut icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="robots" content="noindex,nofollow" />
 		<title>Paco Admin Dashboard</title>
